src/static/scss/components/_section-nav.scss
.section-nav {
	width: 100%;
	background-color: palette-get(na-black-10);
	height: 72px;
	z-index: 100;

	&.fixed {
		position: fixed;
		top: $top-nav-height;
		left: 0px;
	}

	&__placeholder {
		&.fixed {
			height: $top-nav-height;
		}
	}

	&__items {
		margin: auto;
		text-align: center;
	}

	&__item {
		display: inline-block;
		padding: 14px calc(100%/60);
		vertical-align: middle;
		cursor: pointer;

		@include breakpoint(medium) {
			padding-left: 30px;
			padding-right: 30px;
		}

		&:hover, &.selected {
			.section-nav__item__text {
				color: white;
			}
			.icon {
				fill: white;
			}
		}

		&:hover {
			background-color: palette-get(na-black-30);
		}

		&.selected {
			background-color: palette-get(na-turquoise);
		}

		.icon {
			fill: palette-get(na-black);
			height: 20px;
			width: auto;
		}
		&__text {
			font-size: 16px;
			line-height: 1;
			margin-bottom: 0px;
			text-transform: capitalize;
		}
	}
}

